resource: don't send the started event more than one time

Refs #26394